--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/bassmake/hi-wasm.git"
   },
   "author": "",
-  "license": "ISC",
+  "license": "unlicense",
   "bugs": {
     "url": "https://github.com/bassmake/hi-wasm/issues"
   },
