--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Playing around with WASM",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node tests",
+    "asbuild:debug": "asc assembly/index.ts --target debug",
+    "asbuild:release": "asc assembly/index.ts --target release",
+    "asbuild": "npm run asbuild:debug && npm run asbuild:release",
+    "start": "npx serve ."
   },
   "repository": {
     "type": "git",
@@ -15,5 +19,15 @@
   "bugs": {
     "url": "https://github.com/bassmake/hi-wasm/issues"
   },
-  "homepage": "https://github.com/bassmake/hi-wasm#readme"
+  "homepage": "https://github.com/bassmake/hi-wasm#readme",
+  "devDependencies": {
+    "assemblyscript": "^0.26.4"
+  },
+  "type": "module",
+  "exports": {
+    ".": {
+      "import": "./build/release.js",
+      "types": "./build/release.d.ts"
+    }
+  }
 }
